fix: groups filter
